--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -1519,10 +1519,9 @@
     "import matplotlib.image as mpimg\n",
     "california_img=mpimg.imread(PROJECT_ROOT_DIR + '/images/end_to_end_project/california.png')\n",
     "ax = housing.plot(kind=\"scatter\", x=\"longitude\", y=\"latitude\", figsize=(10,7),\n",
-    "                       s=housing['population']/100, label=\"Population\",\n",
-    "                       c=\"median_house_value\", cmap=plt.get_cmap(\"jet\"),\n",
-    "                       colorbar=False, alpha=0.4,\n",
-    "                      )\n",
+    "                  s=housing['population']/100, label=\"Population\",\n",
+    "                  c=\"median_house_value\", cmap=plt.get_cmap(\"jet\"),\n",
+    "                  colorbar=False, alpha=0.4)\n",
     "plt.imshow(california_img, extent=[-124.55, -113.80, 32.45, 42.05], alpha=0.5,\n",
     "           cmap=plt.get_cmap(\"jet\"))\n",
     "plt.ylabel(\"Latitude\", fontsize=14)\n",
